# valerie-bot

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml  run_bot.py  settings.py
migrations/: 20241228133833_init.down.sql  20241228133833_init.up.sql
src/: texts.py
src/bot/: bot.py  states.py
src/bot/handlers/: commands.py  error.py  find_place.py
src/mappers/: places.py  users.py
src/models/: places.py  users.py
src/repositories/: open_ai.py
src/repositories/postgres/: messages.py  places.py  users.py
src/services/: places.py  users.py
src/utils/: postgres_pool.py
src/utils/telegram/: callback_data.py  inline_keyboard.py  send_message.py
